[package]
name = "sudoku_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = { version = "1.0" }
serde = { version = "1.0.219", features = ["derive"] }
tower = "0.5.2"
log = "0.4.27"
log4rs = "1.3.0"
dotenv = "0.15.0"
tower-http = { version = "0.6.2", features = ["full"] }
